--- a/prepros-6.config
+++ b/prepros-6.config
@@ -68,7 +68,8 @@
         "css/blocks/comment.scss",
         "css/blocks/work.scss",
         "css/blocks/form.scss",
-        "css/blocks/footer.scss"
+        "css/blocks/footer.scss",
+        "css/blocks/fix_menu.scss"
       ]
     }
   ],
