--- a/prepros-6.config
+++ b/prepros-6.config
@@ -59,6 +59,7 @@
         "css/layout/layout.scss",
         "css/blocks/header.scss",
         "css/blocks/nav.scss",
+        "css/blocks/logo.scss",
         "css/blocks/promo.scss",
         "css/blocks/btn.scss",
         "css/blocks/best.scss",
@@ -69,12 +70,14 @@
         "css/blocks/work.scss",
         "css/blocks/form.scss",
         "css/blocks/footer.scss",
-        "css/blocks/fix_menu.scss"
+        "css/blocks/fix_menu.scss",
+        "css/blocks/burgermenu.scss",
+        "css/blocks/block.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
