--- a/prepros-6.config
+++ b/prepros-6.config
@@ -71,8 +71,7 @@
         "css/blocks/form.scss",
         "css/blocks/footer.scss",
         "css/blocks/fix_menu.scss",
-        "css/blocks/burgermenu.scss",
-        "css/blocks/block.scss"
+        "css/blocks/burgermenu.scss"
       ]
     }
   ],
