--- a/prepros-6.config
+++ b/prepros-6.config
@@ -57,6 +57,7 @@
         "css/layout/normalize.scss",
         "css/font/stylesheet.scss",
         "css/layout/layout.scss",
+        "css/layout/media.scss",
         "css/blocks/header.scss",
         "css/blocks/nav.scss",
         "css/blocks/logo.scss",
