--- a/prepros-6.config
+++ b/prepros-6.config
@@ -64,7 +64,7 @@
         "css/blocks/promo.scss",
         "css/blocks/btn.scss",
         "css/blocks/best.scss",
-        "css/blocks/dark.scss",
+        "css/blocks/slider.scss",
         "css/blocks/team.scss",
         "css/blocks/menu.scss",
         "css/blocks/comment.scss",
