--- a/prepros-6.config
+++ b/prepros-6.config
@@ -72,7 +72,9 @@
         "css/blocks/form.scss",
         "css/blocks/footer.scss",
         "css/blocks/fix_menu.scss",
-        "css/blocks/burgermenu.scss"
+        "css/blocks/burgermenu.scss",
+        "css/blocks/duration.scss",
+        "css/blocks/sound.scss"
       ]
     }
   ],
