--- a/prepros-6.config
+++ b/prepros-6.config
@@ -74,7 +74,8 @@
         "css/blocks/fix_menu.scss",
         "css/blocks/burgermenu.scss",
         "css/blocks/duration.scss",
-        "css/blocks/sound.scss"
+        "css/blocks/sound.scss",
+        "css/blocks/drop.scss"
       ]
     }
   ],
