--- a/prepros-6.config
+++ b/prepros-6.config
@@ -75,7 +75,8 @@
         "css/blocks/burgermenu.scss",
         "css/blocks/duration.scss",
         "css/blocks/sound.scss",
-        "css/blocks/drop.scss"
+        "css/blocks/drop.scss",
+        "css/blocks/overley.scss"
       ]
     }
   ],
